# Autonomous_Influencer_Network

./: .coderabbit.yaml  .dockerignore  Dockerfile  Makefile  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
.cursor/: rules
.github/workflows/: main.yml
research/: analysis_summary.md  architecture_strategy.md  tooling_strategy.md
skills/: README.md
skills/skill_download_youtube/: README.md
skills/skill_generate_video/: README.md
skills/skill_transcribe_audio/: README.md
specs/: README.md  _meta.md  api_contracts.md  database_schema.md  functional.md  openclaw_integration.md  technical.md
tests/: test_skills_interface.py  test_trend_fetcher.py
tools/: check_specs.py  md_to_pdf.py
